[package]
name = "rswidevine"
version = "0.1.1"
edition = "2021"
description = "Widevine CDM (Content Decryption Module) implementation in Rust."
license = "GPL-3.0-only"
repository = "https://github.com/waki285/rswidevine"
homepage = "https://github.com/waki285/rswidevine"
keywords = ["widevine", "drm", "cdm", "cenc"]
categories = ["multimedia::video", "cryptography"]

rust-version = "1.87.0"
include = ["src/**", "Cargo.toml", "Cargo.lock", "build.rs", "LICENSE", "README.md", "examples/**"]

[dependencies]
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
prost = "0.14"
prost-types = "0.14"
uuid = { version = "1", default-features = false, features = ["fast-rng", "std", "v4"] }
hex = "0.4"

# Cryptography
rsa = { version = "0.9", features = ["sha1", "sha2", "pem"] }
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
cmac = "0.7"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"

# Serialization
base64 = "0.22"
byteorder = "1"

# Optional functionality
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
reqwest = { version = "0.13", features = ["json", "blocking", "rustls"], optional = true }
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
crc32fast = { version = "1", optional = true }
deunicode = { version = "1", optional = true }
roxmltree = { version = "0.21", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"], optional = true }

[[bin]]
name = "rswidevine"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "rswidevine"
path = "src/lib.rs"

[features]
default = ["cli", "tracing"]

cli = [
    "dep:clap",
    "dep:crc32fast",
    "dep:deunicode",
    "dep:reqwest",
    "dep:serde",
    "dep:serde_json",
    "dep:serde_yaml",
    "dep:tracing",
    "dep:tracing-subscriber",
]
chrono = ["dep:chrono"]
full = ["cli", "chrono", "playready", "remote", "serve", "tracing"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
playready = ["dep:roxmltree"]
remote = ["dep:reqwest", "dep:serde", "dep:serde_json"]
serve = ["dep:axum", "dep:tokio", "dep:serde", "dep:serde_json"]

[build-dependencies]
prost-build = "0.14"
